# richard-med

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  Richard_Med_Pitch.pptx  docker-compose.yml  package-lock.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 69f88a1adbc4_add_city_to_clinic_service_prices.py  6a2bc8a626c1_merge_doctors_and_cabinet_branches.py  8c2f1a5b9d34_add_cabinet_tables.py  a1b2c3d4e5f6_source_category_on_prices.py  a3f1c0d9b7e2_add_other_service_category.py  a4d8e1f6c2b9_saved_service_per_clinic.py  b6e3f9a1c4d2_compare_insight_cache.py  b7d4e2f1a9c3_city_not_null_on_prices.py  c5c750828c71_initial_schema.py  d9e2b4f7c1a8_hnsw_index_on_services_embedding.py  e1a2b3c4d5f6_create_users.py  f2b9c4e7a1d0_add_branch_ratings_and_reviews.py  f3a9c1e88b22_doctors_enrichment.py
backend/app/: main.py
backend/app/core/: auth.py  cities.py  config.py
backend/app/data/: 2gis_reviews.json  helix_branches.json
backend/app/models/: __init__.py  auth.py  (+7 more)
backend/tests/: conftest.py  test_admin_api.py  test_admin_auth.py  test_analytics_api.py  test_auth.py  test_branches.py  test_cabinet.py  test_catalog_grow.py  test_cities.py  test_clinics.py  test_compare_insight.py  test_doctor_enrich.py  test_doctors_api.py  test_geocoding.py  test_health.py  test_live_search.py  test_llm_verify.py  test_map.py  test_normalization.py  test_parse_runner.py  test_pipeline.py  test_reviews_loader.py  test_scrapers.py  test_search_api.py  test_sources.py  test_twogis.py
(+214 files in other folders)
