[project]
name = "richard-med-backend"
version = "0.1.0"
description = "Richard Med — FastAPI backend"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
# B008: FastAPI's Depends()/Query() in argument defaults is the intended idiom.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
